forth/test/fail/test_call_undefined.af
\ Must fail to compile.
fun: .test_call_undefined { -- err }
  .MISSING_WORD
end
